--- a/requirements.txt
+++ b/requirements.txt
@@ -3,24 +3,33 @@ asgiref==3.3.1
 astroid==2.4.2
 boto3==1.16.46
 botocore==1.19.46
+certifi==2020.12.5
+chardet==4.0.0
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.4
 django-crispy-forms==1.10.0
+django-on-heroku==1.1.2
 django-storages==1.11.1
 filelock==3.0.12
 gunicorn==20.0.4
+heroku==0.1.4
+idna==2.10
 isort==5.6.4
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==8.0.1
+psycopg2-binary==2.8.6
 pylint==2.6.0
-python-dateutil==2.8.1
+python-dateutil==1.5
 pytz==2020.5
+requests==2.25.1
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
 urllib3==1.26.2
 virtualenv==20.2.2
+whitenoise==5.2.0
 wrapt==1.12.1
